--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,9 @@
   /* On mouse-over, add a deeper shadow */
   .card:hover {
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+	-ms-transform: scale(1.05); /* IE 9 */
+	-webkit-transform: scale(1.05); /* Safari 3-8 */
+	transform: scale(1.05); 
   }
   
   /* Add some padding inside the card container */
